@@ -1,3 +1,9 @@
+2006-01-27  Frank Ch. Eigler  <fche@elastic.org>
+
+	* main.cxx (main): In verbose mode, print user+sys times after
+	each pass.
+	* buildrun.cxx (compile_pass): Move success message back to main().
+	
 2006-01-26  Frank Ch. Eigler  <fche@elastic.org>
 
 	PR 2060: lock elevation, mop-up
